# optimisation-d-une-ligne-d-assemblage-ing2-tg-2023-2024-groupe-14-equipe-2

./: CMakeLists.txt  SSP.h  SSPem.c  colorisation.c  cycle.c  cycle.h  excusion.c  excusion.h  main.c  menu.c  point_h_emile.h  precedences.c  relie.h  spp_emile.c  stdio.h  struc_exclu.h  struc_excusion.h  struct.h  structure.h
