cmake_minimum_required(VERSION 3.23.2)
project(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_groupe_14_equipe_2 C)

set(CMAKE_C_STANDARD 11)

add_executable(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_groupe_14_equipe_2 main.c spp_emile.c point_h_emile.h excusion.c excusion.h struc_excusion.h structure.h)
